style: simplify code.